--- a/style.css
+++ b/style.css
@@ -1,172 +1,198 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    width: 90%;
-    height: auto;
-    padding: 5%;
-    background-color: #1E8AD9;
-    font-family: 'Nunito', sans-serif;
-    font-size: 0.87rem;
+body {
+  width: 90%;
+  height: auto;
+  padding: 5%;
+  background-color: #1E8AD9;
+  font-family: 'Nunito', sans-serif;
+  font-size: 0.87rem;
 }
 
-header,main{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+header,
+main {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo{
-    width: 5rem;
+.logo {
+  width: 5rem;
 }
-.navbar{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin: 2rem 0 1rem 0;
+
+.navbar {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin: 2rem 0 1rem 0;
 
 }
+
 .container_input {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .input_search {
-    width: 7.5rem;
-    height: 1.5rem;
-    padding: 10px;
-    border-radius: 50px;
-    border: none;
-    background-color: #86C4F3;
-    outline: none;
+  position: relative;
+  display: inline-block;
+}
 
-  }
+.input_search {
+  width: 7.5rem;
+  height: 1.5rem;
+  padding: 10px;
+  border-radius: 50px;
+  border: none;
+  background-color: #86C4F3;
+  outline: none;
 
-  .input_search:focus{
-    border:2px solid #F16D1C ;
-    padding-left: 2.5rem;
-    color: white;
-  }
+}
 
-  .input_search:not(:focus){
-    color: white;
-    padding-left: 2.5rem;
+.input_search:focus {
+  border: 2px solid #F16D1C;
+  padding-left: 2.5rem;
+  color: white;
+}
 
-  }
-  
-  .icon_lupa{
-    width: 2rem;
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-  }
-  
-  .icon_user, .icon_shopping_cart{
-    width:2.8rem;
-    height: auto;
-  }
+.input_search:not(:focus) {
+  color: white;
+  padding-left: 2.5rem;
 
-  .separator{
-    width: 25rem;   
-    height: auto; 
-  }
+}
 
-  h1{
-    width: auto;
-    height: auto;
-    font-size: 2.5rem;
-    color: #F16D1C;
-  }
+.icon_lupa {
+  width: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+}
 
-  .container-buttons{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
+.icon_user,
+.icon_shopping_cart {
+  width: 2.8rem;
+  height: auto;
+}
 
-  .container-buttons>button{
-    width: 5rem;
-    height: auto;
-    padding: 0.2rem;
-    border-radius: 50px;
-    border: none;
-    background-color: #86C4F3;
-    color: white;
-    cursor: pointer;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-  }
+.separator {
+  width: 25rem;
+  height: auto;
+}
 
-  .container-buttons>button:hover{
-    background-color: #46A6EA;
-  }
+h1 {
+  width: auto;
+  height: auto;
+  font-size: 2.5rem;
+  color: #F16D1C;
+}
 
-  .container-buttons>button:active{
-    background-color: #F16D1C;
-    box-shadow: none; 
-  transform: translateY(1px); 
-  }
+.container-buttons {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
 
-  .container-buttons>button:disabled{
-    background-color: #D9D8D7;
-    color: #F16D1C;
-  }
+.container-buttons>button {
+  width: 5rem;
+  height: auto;
+  padding: 0.2rem;
+  border-radius: 50px;
+  border: none;
+  background-color: #86C4F3;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
 
-  .container-cards{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    margin: 1.5rem 0 0.5rem 0;
-  }
+.container-buttons>button:hover {
+  background-color: #46A6EA;
+}
 
- 
-  .container_product{
-    width: 6.5rem;
-    height: 6.5rem;
-    position: relative;
-  }
-  
-  .container_product>img {
-    display: block;
-    max-width: 100%; 
-    position: relative; 
-    z-index: 1; 
-    opacity: 70%;
-  }
-  .container_product::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 60px; 
-    background: linear-gradient(to top, #0e6caf, transparent); 
-    z-index: 2; 
-  }
-  
-  .container_product>h2{
-    font-size: 15px;
-    position: absolute; 
-    top: 55%; 
-    left: 18%; 
-    color: white; 
-    z-index: 3; 
-    font-weight: bold;
-  }
+.container-buttons>button:active {
+  background-color: #F16D1C;
+  box-shadow: none;
+  transform: translateY(1px);
+}
 
-  
+.container-buttons>button:disabled {
+  background-color: #D9D8D7;
+  color: #F16D1C;
+}
+
+.container-cards {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  margin: 1.5rem 0 0.5rem 0;
+}
+
+
+.container_product {
+  width: 6.5rem;
+  height: 6.5rem;
+  position: relative;
+}
+
+.container_product>img {
+  display: block;
+  max-width: 100%;
+  position: relative;
+  z-index: 1;
+  opacity: 70%;
+}
+
+.container_product::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: linear-gradient(to top, #0e6caf, transparent);
+  z-index: 2;
+}
+
+.container_product>h2 {
+  font-size: 15px;
+  position: absolute;
+  top: 55%;
+  left: 18%;
+  color: white;
+  z-index: 3;
+  font-weight: bold;
+}
+
+footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-icons {
+  width: 70%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.container-icons>a>img {
+  width: 1.5rem;
+  height: auto;
+  margin-top: 0.4rem;
+}
