--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ main {
 
 }
 
+.menu-hamburguer {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.menu-hamburguer span {
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  margin: 5px 0;
+}
+
 .container_input {
   position: relative;
   display: inline-block;
