--- a/style.css
+++ b/style.css
@@ -40,13 +40,44 @@ main {
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  padding: 10px;
 }
 
 .menu-hamburguer span {
-  height: 3px;
-  width: 25px;
   background-color: white;
-  margin: 5px 0;
+  height: 3px;
+  width: 30px;
+  margin: 6px 0;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.menu {
+  position: fixed;
+    top: 26%;
+    left: 14%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.menu a {
+  display: block;
+  margin: 15px;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu a:hover {
+  color: #ffd700;
 }
 
 .container_input {
