--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  margin: 2rem 0 1rem 0;
+  margin: 1.5rem 0 1rem 0;
 
 }
 
@@ -44,34 +44,26 @@ main {
 }
 
 .menu-hamburguer span {
-  background-color: white;
-  height: 3px;
-  width: 30px;
-  margin: 6px 0;
-}
-
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #86C4F3;
+  height: 5px;
+  width: 40px;
+  margin: 4px 0;
 }
 
 .menu {
   position: fixed;
     top: 26%;
-    left: 14%;
+    left: 12%;
     transform: translate(-50%, -50%);
     text-align: center;
+    background-color: #0e6cafce;
+    padding: 1rem 0 1rem 0;
 }
 
 .menu a {
   display: block;
-  margin: 15px;
-  font-size: 20px;
+  margin: 15px 8px;
+  font-size: 16px;
   color: #fff;
   text-decoration: none;
 }
