--- a/style.css
+++ b/style.css
@@ -53,11 +53,12 @@ main {
 .menu {
   position: fixed;
     top: 26%;
-    left: 12%;
+    left: 13.7%;
     transform: translate(-50%, -50%);
     text-align: center;
     background-color: #0e6cafce;
     padding: 1rem 0 1rem 0;
+    display: none;
 }
 
 .menu a {
