--- a/style.css
+++ b/style.css
@@ -180,14 +180,16 @@ h1 {
   width: 6.5rem;
   height: 6.5rem;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .container_product>img {
-  display: block;
-  max-width: 100%;
-  position: relative;
-  z-index: 1;
+  width: 100%;
+  height: 100%;
   opacity: 70%;
+  object-fit: contain;
+
 }
 
 .container_product::after {
@@ -201,14 +203,23 @@ h1 {
   z-index: 2;
 }
 
-.container_product>h2 {
+.container_product>.container_tittle {
+  width: 90%;
+  height: 40%;
   font-size: 8px;
   position: absolute;
   top: 55%;
-  left: 18%;
   color: white;
   z-index: 3;
   font-weight: bold;
+  text-align: center;
+}
+
+.container_product>.container_tittle>h2{
+  max-width: 100%;
+  max-height: 80%;
+  overflow-x: hidden;
+
 }
 
 footer {
