--- a/style.css
+++ b/style.css
@@ -11,7 +11,14 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 0.87rem;
 }
-
+header{
+  position: fixed;
+  top: 0;
+  left:0;
+  padding-top: 14px;
+  z-index: 5;
+  background-color: #1E8AD9;
+}
 header,
 main {
   width: 100%;
@@ -19,6 +26,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+main{
+  margin-top: 9.5rem;
 }
 
 .logo {
@@ -115,6 +125,17 @@ main {
   height: auto;
 }
 
+.container_category{
+  width: 100%;
+  height: 18%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  z-index: 5;
+  background-color: #1E8AD9;
+}
+
 .separator {
   width: 25rem;
   height: auto;
@@ -172,7 +193,7 @@ h1 {
   align-items: center;
   flex-wrap: wrap;
   gap: 1.5rem;
-  margin: 1.5rem 0 0.5rem 0;
+  margin: 10.5rem 0 0.5rem 0;
 }
 
 
@@ -228,6 +249,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1E8AD9;
 }
 
 .container-icons {
@@ -248,8 +270,8 @@ footer {
 .modal{
   width: 20rem;
   height: auto;
-  z-index: 4;
-  background-color: #025373ef;
+  z-index: 5;
+  background-color:#f16e1ceb;
   border-radius: 3rem;
   opacity: 98%;
   color: #D9D8D7;
@@ -283,12 +305,13 @@ footer {
   background-color: #0e6caf00;
   position: relative;
   left: 40%;
+  color: #0e6caf;
 }
 
 .price{
   position: absolute;
   top: 35%;
   left: 73%;
-  font-size: 26px;
-  color: #F16D1C;
+  font-size: 20px;
+  color: #0e6caf;
 }
