--- a/template/cart/cart.html
+++ b/template/cart/cart.html
@@ -7,6 +7,24 @@
     <title>Shopping cart</title>
 </head>
 <body>
-    
+    <header>
+        <h2 class="shopping_cart">Shopping Cart</h2>
+    </header>
+    <main>
+        <div class="container_card">
+            <img src="" alt="">
+            <div class="description">
+                <h3 class="title"></h3>
+                <h3 class="price"></h3>
+            </div>
+            <div class="amount">
+                <button class="increase"></button>
+                <h4 class="number_amount"></h4>
+                <button class="decrease"></button>
+            </div>
+        </div>
+        <h2 class="total"></h2>
+        <button class="buy"></button>
+    </main>
 </body>
 </html>
