--- a/style_modal.css
+++ b/style_modal.css
@@ -1,59 +1,69 @@
-.modal{
-    width: 90%;
-    height: 100%;
-    background-color:#f16e1ceb;
-    opacity: 98%;
-    color: #D9D8D7;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 1rem;
-    position: fixed;
-    top: 0;
-    left: 0%;
-    z-index: 5;
-    padding: 5%;
-  }
-  
-  .image{
-    width: 10rem;
-    height: auto;
-    margin-top: 1.5rem;
-  }
-  
-  .description{
-    font-size: 20px;
-    margin-bottom: 1rem;
-  }
-  
-  .close{
-    width: auto;
-    height: auto;
-    font-size: 25px;
-    border-style: none;
-    background-color: #46A6EA;
-    position: relative;
-    top: 2%;
-    left: 40%;
-    color: #fff;
-    padding: 0.5rem;
-    border-radius: 25%;margin-bottom: 2rem;
-  }
-  
-  .price,.category{
-    font-size: 25px;
-    color: #0e6caf;
-  }
-  
-  .add_to_cart{
-    width: auto;
-    height: auto;
-    font-size: 25px;
-    border-style: none;
-    background-color: #46A6EA;
-    color: #fff;
-    padding: 1rem;
-    border-radius: 25px;
-  }
-  
+.modal {
+  width: 90%;
+  height: 100%;
+  background-color: #f16e1ceb;
+  opacity: 98%;
+  color: #D9D8D7;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 1rem;
+  position: fixed;
+  top: 0;
+  left: 0%;
+  z-index: 5;
+  padding: 5%;
+}
+
+.image {
+  width: 10rem;
+  height: auto;
+  margin-top: 1.5rem;
+}
+
+.description {
+  width: 80%;
+  height: 10rem;
+  font-size: 20px;
+  margin-bottom: 1rem;
+  overflow-x: hidden;
+}
+
+.close {
+  width: auto;
+  height: auto;
+  font-size: 25px;
+  border-style: none;
+  background-color: #46A6EA;
+  position: relative;
+  top: 2%;
+  left: 40%;
+  color: #fff;
+  padding: 0.5rem;
+  border-radius: 25%;
+  margin-bottom: 2rem;
+}
+
+.price,
+.category {
+  font-size: 25px;
+  color: #0e6caf;
+}
+
+.add_to_cart {
+  width: auto;
+  height: auto;
+  padding: 1rem;
+  border-radius: 30px;
+  border: none;
+  background-color: #86C4F3;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  font-size: 1.5rem;
+}
+
+.add_to_cart:hover {
+  background-color: #46A6EA;
+}
