--- a/template/cart/cart.html
+++ b/template/cart/cart.html
@@ -19,14 +19,14 @@
 
         <div class="container_products">
             <div class="container_card">
-                <img src="ej_product.jpg" alt="">
+                <img class="img" src="" alt="">
                 <div class="description">
-                    <h3 class="title">silla gamer </h3>
-                    <h3 class="price">$566</h3>
+                    <h3 class="title"></h3>
+                    <h3 class="price"></h3>
                 </div>
                 <div class="amount">
                     <button class="increase">+</button>
-                    <h4 class="number_amount">1</h4>
+                    <h4 class="number_amount"></h4>
                     <button class="decrease">-</button>
                 </div>
             </div>
