--- a/template/cart/cart.html
+++ b/template/cart/cart.html
@@ -11,30 +11,24 @@
 
 <body>
     <header>
+        <a href="../../index.html">
+            <img class="return" src="return.png" alt="">
+        </a>
+        
         <img class="logo" src="logo.png" alt="" />
         <h2 class="shopping_cart">Shopping Cart</h2>
+
     </header>
     <main>
         <h3 class="statement">Articulos agregados al carrito</h3>
 
         <div class="container_products">
-            <div class="container_card">
-                <img class="img" src="" alt="">
-                <div class="description">
-                    <h3 class="title"></h3>
-                    <h3 class="price"></h3>
-                </div>
-                <div class="amount">
-                    <button class="increase">+</button>
-                    <h4 class="number_amount"></h4>
-                    <button class="decrease">-</button>
-                </div>
-            </div>
-
+           
         </div>
-        <h2 class="total">TOTAL: $566</h2>
+        <h2 class="total">TOTAL: $0</h2>
         <button class="buy">Buy Now</button>
     </main>
+    <script src="cart.js"></script>
 </body>
 
 </html>
