--- a/template/cart/cart.css
+++ b/template/cart/cart.css
@@ -56,6 +56,10 @@ main {
 .container_products{
     width: 100%;
     min-height: 7rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
 }
 .container_card {
     width: 100%;
